--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ bcrypt==3.1.4
 cffi==1.11.5
 Click==7.0
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
