--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 bcrypt==3.1.4
+blinker==1.4
 cffi==1.11.5
 Click==7.0
 Flask==1.0.2
 Flask-Bcrypt==0.7.1
+Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
